# chatServer

./: CMakeLists.txt  main.cpp
models/: client.h
resources/: properties.h
resources/static/: functionalNames.h  serverInfo.h  staticSymbols.h
services/: socketServices.h  stringServices.h
